    private for consistent meta-predicate semantics. Updated the "dcgs"
    example and the corresponding unit tests in order to comply with the
    new phrase/2-3 predicate scope.

    Corrected a bug in the implementation of the phrase/2-3 built-in methods
    that could allow access to non-visible grammar rules.

    Improved performance of Module:NonTerminal goals in grammar rules.

    Added goal_expansion/2 clauses to the SWI-Prolog and YAP config files in
    order to allow calling the Prolog built-in predicates phrase/2-3 with a
    Object::GrammarRuleBody in the first argument.

    Corrected a bug in the compilation of meta-calls and the <</2 control
    construct in debug mode where the meta-arguments would not be compiled
    in debug mode.

    Corrected the definitions of the predicates '$lgt_current_date'/3 and
    '$lgt_current_time'/3 in the Qu-Prolog config file and rename it to
    "qp.pl". Updated the minimum required version to 8.11 and changed the
    value of the Logtalk flag "prolog_dialect" from "qu" to "qp" in order
    to match the value of the new Prolog flag "dialect" implemented in
    Qu-Prolog 8.11. Added support for the "smart_compilation" compiler flag.
    Improved startup time when using the "qplgt.sh" integration script. 

    Improved the "examples/tester.sh" script in order to support running the
    example unit tests compiled in debug mode.

    Added a a simple maze search problem using a depth-first strategy with
    loop detection to the "benchmarks" example.

    Added missing support for syntax coloring of the "complements" entity
    relation to Pygments.


2.39.2 - May 4, 2010

    Changed the internal representation of most entity properties to use a
    more compact bit representation, stored in the tables of loaded entities.

    Changed the internal representation of non-critical predicate properties
    to use a more compact bit representation, which includes the "multifile"